 Tue Aug 16 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.2-3
  - support run both core and web api test packages in one test run
  - fill the device info, test plan name and testing start/end time to result xml
  - remove txt test result
 Tue Aug 14 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.2-2
  - use str2str function defined in common module to replace the complex regular expression
  - support Windows platform
 Tue Aug 8 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.2-1
  - remove unreadable characters from stdout and stderr
 Tue Aug 4 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.1-1
  - Fix bug: Testkit could not output the whole result.xml
 Tue Jul 26 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-3
  - modify index and manualharness to make test widgets display better
  - add suppor to view test result in XSL format
 Tue Jul 12 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-2
  - Fix bug: can't be installed by command 'rpm -ivh'
  - change option -A from --all to --auto-only
 Tue Jul 7 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.0-1
  - code clean up
  - Fix bug: log directory doesn't have millisecond
 Fri Jun 29 2012 Jing Wang <jing.j.wang@intel.com> 2.2.0 
  - code clean up. remove original parser and filter, but use etree instead
  - for normal and external test, filter is done by testkit-lite in uniform way
  - update manual doc
  - Add performance test support
  - Support case hint when running external test
  - Support run under Windows (Non-install mode)
  - Fix bug: result location issue
  - Fix bug: execution_type filter issue in testkit-web
  - Fix bug: fullscreen issue
 Fri Mar 30 2012 Yugang Fan <yugang.fan@intel.com> 2.1.0-4 
  - Add license header to web/index.html and web/manualharness.html.
 Tue Mar 27 2012 Tian Xu <xux.tian@intel.com> 2.1.0-2 
  - Add pretty print manual case detials
  - Fixed bug: can't get final result xml by "-o" option when
  testkit-lite be killed