@@ -1,3 +1,4 @@
 TODO:
 ========
 1. add --verbose and logging level
+2. improve algorithm to merge result files
