@@ -33,7 +33,7 @@ from testkitlite.common.killall import killall
 from testkitlite.common.str2 import *
 
 ###############################################################################
-def shell_exec(cmd, timeout=None, boutput=False):
+def shell_exec(cmd, pid_log, timeout=None, boutput=False):
     """shell executor, return [exitcode, stdout/stderr]
        timeout: None means unlimited timeout
        boutput: specify whether print output during the command running
@@ -55,6 +55,14 @@ def shell_exec(cmd, timeout=None, boutput=False):
     # start execution process
     cmdPopen = subprocess.Popen(args=cmd, shell=True,
                                 stdout=wbuffile1, stderr=wbuffile2)
+    # write pid only for external execution
+    if pid_log is not "no_log":
+        try:
+            with open(pid_log, "a") as fd:
+                pid = str(cmdPopen.pid)
+                fd.writelines(pid + '\n')
+        except:
+            pass
 
     def print_log():
         sys.stdout.write(rbuffile1.read())
@@ -80,7 +88,7 @@ def shell_exec(cmd, timeout=None, boutput=False):
                     cmdPopen.terminate()
                     time.sleep(5)
                 except:
-                    killall(cmdPopen.pid) 
+                    killall(cmdPopen.pid)
                 break
             else:
                 t -= LOOP_DELTA
@@ -113,4 +121,3 @@ def shell_exec(cmd, timeout=None, boutput=False):
     os.remove(BUFFILE2)
 
     return [exit_code, stdout_log.strip('\n'), stderr_log.strip('\n')]
-
